base/admin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synesis-admin
  labels:
    app.kubernetes.io/part-of: synesis
    app.kubernetes.io/managed-by: kustomize
